<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:padding="10dp" 
    tools:context="com.mobile.mutiboclient.activities.SetActivity" >

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/footerText"
            style="@style/ApplicationTitle"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp" 
            android:drawableLeft="@drawable/heart_small"
            android:drawablePadding="3dip"/>
    </RelativeLayout>

    <!-- Content above footer -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomingText"
            style="@style/ApplicationTitle"
            android:text="@string/app_name" />

        <RadioGroup
            android:id="@+id/movieRadioGroup"
            style="@style/RadioGroup" >

            <RadioButton
                android:id="@+id/movie1"
                style="@style/RadioGroup"
                android:checked="true"
                android:text="@string/movie_1" />

            <RadioButton
                android:id="@+id/movie2"
                style="@style/RadioGroup"
                android:checked="true"
                android:text="@string/movie_2" />

            <RadioButton
                android:id="@+id/movie3"
                style="@style/RadioGroup"
                android:checked="true"
                android:text="@string/movie_3" />

            <RadioButton
                android:id="@+id/movie4"
                style="@style/RadioGroup"
                android:checked="true"
                android:text="@string/movie_4" />
        </RadioGroup>

        <Button
            android:id="@+id/submitSetButton"
            style="@style/Button"
            android:text="@string/submit_set" />
        
    </LinearLayout>

</RelativeLayout>