<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.mobile.mutiboclient.activities.GameOverActivity" >

    <TextView
        android:id="@+id/welcomingText"
        style="@style/ApplicationTitle"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/userNameText"
        style="@style/TextView"
        android:gravity="start"
        android:text="@string/username_text" />

    <EditText
        android:id="@+id/userNameTextInput"
        android:background="#FFFFFF"
        style="@style/TextView" />

    <TextView
        android:id="@+id/passwordText"
        style="@style/TextView"
        android:gravity="start"
        android:text="@string/password_text" />

    <EditText
        android:id="@+id/passwordInput"
        android:background="#FFFFFF"
        android:inputType="textPassword"
        style="@style/TextView" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Button"
        android:text="@string/login_text" />

</LinearLayout>