<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.mobile.mutiboclient.activities.MainActivity" >

    <TextView
        android:id="@+id/welcomingText"
        style="@style/ApplicationTitle"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/newGameButton"
        style="@style/Button"
        android:text="@string/go_new_game"
        android:visibility="invisible" />
    
    <Button
        android:id="@+id/highScoresButton"
        style="@style/Button"
        android:text="@string/go_high_scores"
        android:visibility="invisible" />

</LinearLayout>
